# pm

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  FastAPITemplate.postman_collection.json  Makefile  README.md  alembic.ini  commands.txt  create_user.py  docker-compose.dev.yml  docker-compose.telegram.yml  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml  research_npu_tpu.ipynb  research_npu_tpu_ru.ipynb  run_update.py  worker.sh
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_cascade_delete.py  003_add_notes_to_meetings.py  004_add_pdf_file_path_to_meetings.py  005_add_company_entity.py  006_add_project_id.py  006_add_project_id_to_notifications.py  007_add_importance.py  007_add_importance_to_meetings.py  008_add_admin_password.py  009_add_subtitle_to_meetings.py  010_add_push_tokens.py  011_add_project_cover.py  0a0b9ad52a1b_add_telegram_chat_id_to_projects.py  176ab991976b_add_status_field_to_user.py  a1b2c3d4e5f6_rename_manager_to_owner.py  d720bdf2d2a5_add_faq_model.py  e1b2c3d4e5f7_add_faq_categories.py  f1a2b3c4d5e6_add_audio_content_type_to_meetings.py
docs/: API.md  DEPLOY.md  DEPLOYMENT.md  FILES_OVERVIEW.md  MVP_SUMMARY.md  README.md  telegram_compare_bot.md
infra/envs/: .env.dev  .env.prod
src/: __init__.py  main.py  telegram_compare_bot.py
src/auth/: router.py  schema.py  services.py  utils.py
src/companies/: models.py  routes.py  schemas.py  services.py
src/core/: admin.py  admin_auth.py  ai_services.py  audio_preprocessor.py  config.py  error_handlers.py  exceptions.py  logging.py  oauth.py  pdf_generator.py  permissions.py  push.py  queue.py  responses.py  routers.py  schema.py  security.py  setup_app.py  storage.py  tasks.py  telegram.py  tenant_admin_auth.py
src/database/: __init__.py  init_db.py  repository.py
src/db/: base.py  deps.py  session.py
src/faq/: models.py  routes.py  schemas.py  services.py
src/meeting/: models.py  router.py  schemas.py  utils.py
src/meetings/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  selectors.py  services.py
src/notifications/: routes.py  schemas.py  selectors.py  services.py
src/project/: models.py  router.py  schemas.py
src/projects/: __init__.py  models.py  routes.py  schemas.py  selectors.py  services.py
src/user/: models.py  router.py  schemas.py
src/users/: models.py  routes.py  schemas.py  selectors.py  services.py
tests/: conftest.py  load_whisper_test.py
(+6 files in other folders)
