[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "pm_assistant"
version = "0.1.0"
description = "PM Assistant Backend API"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.1",
    "fastapi>=0.115.12",
    "psycopg>=3.2.9",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.29.0",
    "ldap3>=2.9",
    "boto3>=1.34.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "arq>=0.25.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "sqladmin>=0.18.0",
    "starlette-admin>=0.3.0",
    "itsdangerous>=2.1.0",
    "httpx>=0.27.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "aiosqlite>=0.20.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
